--- a/test_git2.html
+++ b/test_git2.html
@@ -5,5 +5,6 @@
 <body>
    <h3>Hello Git World!</h3>
    <div>Course Name 477-302 Cloud Computing Tech.<div>
+   <div>My name is Paweesuda Umpama, ID: 6410510135</div>
 </body>
 </html>
